feat: Interface done using scoredDocuments (#41)
* fix: processor edit

* feat: Interface done